-Перевёл 11 языков в словаре

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -261,70 +261,70 @@
     <string name="my_dream_in_dream">Мне сніўся сон у сне які быў сном</string>
     <string name="congratulation">Віншуем!</string>
     <string name="level">\"Узровень \"</string>
-    <string name="you_are_hello">Вас приветствует</string>
-    <string name="tool">Инструмент</string>
-    <string name="got_you_aim">Достижения ваших целей</string>
-    <string name="what_can_i_do">Что я умею делать ?</string>
-    <string name="create_notes">Создавать заметки</string>
-    <string name="follow_finance">Следить за финансами</string>
-    <string name="keep_focus">Держать фокус</string>
-    <string name="keep_schedule">Вести расписание</string>
+    <string name="you_are_hello">Вас вітае</string>
+    <string name="tool">Інструмент</string>
+    <string name="got_you_aim">Дасягнення вашых мэтаў</string>
+    <string name="what_can_i_do">Што я ўмею рабіць ?</string>
+    <string name="create_notes">Ствараць нататкі</string>
+    <string name="follow_finance">Сачыць за фінансамі</string>
+    <string name="keep_focus">Трымаць фокус</string>
+    <string name="keep_schedule">Весці расклад</string>
     <string name="create_standup">Создавать стэндап</string>
-    <string name="also">А также</string>
-    <string name="to_create_event">Создавать события</string>
-    <string name="fix_idea">Фиксировать идеи</string>
-    <string name="lets_start">Давайте начинать !</string>
-    <string name="click_by_screen">Кликните по экрану</string>
-    <string name="before_start">\"Перед началом предлагаем познокомиться с приложением \"</string>
-    <string name="two_tools">Здесь имеются два инструмента навигации</string>
-    <string name="bottom_and_side">Нижняя и боковая</string>
-    <string name="side_open_by_click">Боковая открывается по нажатию на бургер которая находится в верхнем левом углу</string>
-    <string name="after_instruction">После перехода на каждое из окон подождите запуск инструктажа</string>
-    <string name="go">Поехали !</string>
-    <string name="you_calendar">\"Ваш календарь \"</string>
-    <string name="show_day">Отображает дни с обновлением на последующие 3 месяца</string>
-    <string name="set_event_new_task">Зажатием на дату вы можете устанавливать событие или же новую задачу в определенный день недели</string>
-    <string name="next_you_cards">Дальше идут ваши карточки</string>
-    <string name="here_show">Здесь отображаются все ваши карточки с окон Привычки,Категории,События</string>
-    <string name="click_cards_ha_ca">Кликнув на карточки привычек или же категории вы можете проделать определенное действие</string>
-    <string name="show_profile">Открыв боковую панель вы можете увидеть ваш профиль</string>
-    <string name="avater_name">Аватарка,имя и текущий уровень,для того чтобы установить аватарку и имя кликните на них</string>
-    <string name="lvlup_some_action">Уровень повышается за определённые действие такие выполнение привычек,задач и тому подобных</string>
-    <string name="inside_cards_record">\"Карточки внутри которых можно записывать заметки или же задачи \"</string>
-    <string name="hold_card">\"Зажмите на карточку из списка чтобы вызвать окно с действиями \"</string>
-    <string name="insert_button">\"Кнопка добавить \"</string>
-    <string name="create_new_category_click">Нажав на эту кнопку вы можете создать новую карточку,указав название категории и иконку</string>
-    <string name="under_everyday">\" Под каждым днём прячется список который можно заполнить \"</string>
-    <string name="cause_see">Чтобы увидеть что запланировано на тот или иной день кликните на него</string>
-    <string name="hold_task_action">\"Можете зажать на запланнированную задачу из списка чтобы вызвать окно с действиями \"</string>
-    <string name="click_here_button">Нажав на эту кнопку вы можете создать дела на определенный день недели</string>
-    <string name="planning_events">Ваш список запланированных событий</string>
-    <string name="set_remind_by_wish">\" По желанию вы можете установить напоминание \"</string>
-    <string name="create_ev_date">Нажав на эту кнопку вы можете создать события на определенную дату</string>
-    <string name="list_habit">Ваш список привычек которые вы хотите к себе привить</string>
-    <string name="in_left_day">Слева указано сколько дней вы уже закрепляете привычку</string>
-    <string name="in_right_hold">\"Справа сколько дней нужно держаться \"</string>
-    <string name="click_by_habit">\"Кликнув на карточку вы можете отметить выполенение привычки за текущий день а зажав на карточу вы можете вызвать окно с действиями \"</string>
-    <string name="create_new_habit">\" Нажав на эту кнопку вы можете создать новую привычку \"</string>
-    <string name="list_process">Ваш список процессов на которых требуется концентрация</string>
-    <string name="theroy_thousand_hour">\" Это окно создана на основе теорий 10 000 часов\"</string>
-    <string name="profession_thousand_hour">\" В котором говорится чтобы стать профессионалом в определенной области, нужно потратить на её изучение около 10 тысяч часов  \"</string>
-    <string name="work_stopwatch_timer">Нажав на эту кнопку вы можете создать новый процесс,поработать с таймером или же с секундомером</string>
-    <string name="list_standup">\" Ваш список стэндапов \"</string>
-    <string name="team_work">Это окно создана на основе системы командной работы</string>
+    <string name="also">А таксама</string>
+    <string name="to_create_event">Ствараць падзеі</string>
+    <string name="fix_idea">Фіксаваць ідэі</string>
+    <string name="lets_start">Давайце пачынаць !</string>
+    <string name="click_by_screen">Клікніце па экране</string>
+    <string name="before_start">\""Перад пачаткам прапануем пазнаёміцца з дадаткам\"</string>
+    <string name="two_tools">Тут маюцца два інструмента навігацыі</string>
+    <string name="bottom_and_side">Ніжняя і бакавыя</string>
+    <string name="side_open_by_click">Бакавая адкрываецца па націску на бургер якая знаходзіцца ў верхнім левым куце</string>
+    <string name="after_instruction">Пасля пераходу на кожнае з вокнаў пачакайце запуск інструктажу</string>
+    <string name="go">Паехалі !</string>
+    <string name="you_calendar">\"Ваш каляндар\"</string>
+    <string name="show_day">Адлюстроўвае дні з абнаўленнем на наступныя 3 месяцы</string>
+    <string name="set_event_new_task">Заціснутай на дату вы можаце ўсталёўваць падзея ці ж новую задачу ў пэўны дзень тыдня</string>
+    <string name="next_you_cards">Далей ідуць вашыя карткі</string>
+    <string name="here_show">Тут адлюстроўваюцца ўсе вашы карткі з вокнаў звычкі, катэгорыі, падзеі</string>
+    <string name="click_cards_ha_ca">Клікнуўшы на карткі звычак або жа катэгорыі вы можаце прарабіць пэўны дзеянне</string>
+    <string name="show_profile">Адкрыўшы бакавую панэль вы можаце ўбачыць ваш профіль</string>
+    <string name="avater_name">Аватарка, імя і бягучы ўзровень, для таго каб усталяваць аватарку і імя клікніце на іх</string>
+    <string name="lvlup_some_action">Узровень павышаецца за пэўныя дзеянні такія выкананне звычак, задач і таму падобных</string>
+    <string name="inside_cards_record">\"Карткі усярэдзіне якіх можна запісваць нататкі або задачы\"</string>
+    <string name="hold_card">\"Зацісніце на картку з спісу каб выклікаць акно з дзеяннямі\"</string>
+    <string name="insert_button">\"Кнопка Дадаць\"</string>
+    <string name="create_new_category_click">Націснуўшы на гэтую кнопку вы можаце стварыць новую картку, паказаўшы назву катэгорыі і абразок</string>
+    <string name="under_everyday">\" Пад кожным днём хаваецца спіс які можна запоўніць\"</string>
+    <string name="cause_see">Каб убачыць што запланавана на той ці іншы дзень клікніце на яго</string>
+    <string name="hold_task_action">\""Можаце задаць на запланаваную задачу з спісу каб выклікаць акно з дзеяннямі\"</string>
+    <string name="click_here_button">Націснуўшы на гэтую кнопку вы можаце стварыць справы на пэўны дзень тыдня</string>
+    <string name="planning_events">Ваш спіс запланаваных падзей</string>
+    <string name="set_remind_by_wish">\"Па жаданні вы можаце ўсталяваць напамін\"</string>
+    <string name="create_ev_date">Націснуўшы на гэтую кнопку вы можаце стварыць падзеі на пэўную дату</string>
+    <string name="list_habit">Ваш спіс звычак якія вы хочаце да сябе прышчапіць</string>
+    <string name="in_left_day">Злева паказана колькі дзён вы ўжо замацоўваеце звычку</string>
+    <string name="in_right_hold">\"Справа колькі дзён трэба трымацца\"</string>
+    <string name="click_by_habit">\""Клікнуўшы на картку Вы можаце адзначыць выкананне звычкі за бягучы дзень а заціснуўшы на картку Вы можаце выклікаць акно з дзеяннямі\"</string>
+    <string name="create_new_habit">\" Націснуўшы на гэтую кнопку вы можаце стварыць новую звычку\"</string>
+    <string name="list_process">Ваш спіс працэсаў на якіх патрабуецца канцэнтрацыя</string>
+    <string name="theroy_thousand_hour">\" Гэта акно створана на аснове тэорый 10 000 гадзін\"</string>
+    <string name="profession_thousand_hour">\" У якім гаворыцца каб стаць прафесіяналам у пэўнай вобласці, трэба выдаткаваць на яе вывучэнне каля 10 тысяч гадзін\"</string>
+    <string name="work_stopwatch_timer">Націснуўшы на гэтую кнопку вы можаце стварыць новы працэс, папрацаваць з таймерам ці ж з секундамерам</string>
+    <string name="list_standup">\" Ваш спіс стэндапов\"</string>
+    <string name="team_work">Гэта акно створана на аснове сістэмы каманднай працы</string>
     <string name="plan_and_problem_share">\" Где участники команды ежедневоно создают отчёт о проделанной работе и деляться со своми планами и проблемами  \"</string>
-    <string name="good_system">Это очень хорошая система,чтоб держать себя в тонусе</string>
-    <string name="good_friend_standup">\" Вы можете попросить хорошого знакомого чтоб он следил за составлением стэндапов\"</string>
-    <string name="share_fun_send">\" И там как раз есть функция поделиться чтоб вы могли его отправить \"</string>
-    <string name="create_new_standup">\" Нажав на эту кнопку вы можете создать новый стэндап\"</string>
-    <string name="list_dream">Ваш список где собираются ваши записи связанные со сном</string>
-    <string name="up_slept_hour">\" Вверху указано сколько часов вы проспали за указанный день\"</string>
-    <string name="next_time_date">Дальше от скольки до скольки и дата</string>
-    <string name="course_record_dream">\"Кликнув на карточку вы можете посмотреть что снилось в тот день ,конечно же если вы его записали \"</string>
-    <string name="create_new_record">Нажав на эту кнопку вы можете создать новыю запись</string>
-    <string name="folow_finance_window">\" Окно для слежения за ваши финансами \"</string>
-    <string name="new_appear_open">\" Вверху карточка с советами связанные с финансами,новый появляется каждый раз когда вы открываете это окно \"</string>
-    <string name="main_fun_in_ex">\"Основые функции выполняют кнопки Дохода и Расхода \"</string>
-    <string name="template_work">\"Также есть список шаблонных расходов по нажатию на элемент вы можете работать с ним \"</string>
-    <string name="history_button_ex_te">\"И конечно же кнопка истории где учитывается всё помимо шаблонных расходов \"</string>
+    <string name="good_system">Гэта вельмі добрая сістэма, каб трымаць сябе ў тонусе</string>
+    <string name="good_friend_standup">\" Вы можаце папрасіць добрага знаёмага каб ён сачыў за складаннем стэндапов\"</string>
+    <string name="share_fun_send">\" І там як раз ёсць функцыя падзяліцца каб вы маглі яго адправіць\"</string>
+    <string name="create_new_standup">\" Націснуўшы на гэтую кнопку вы можаце стварыць новы стендап\"</string>
+    <string name="list_dream">Ваш спіс дзе збіраюцца вашыя запісы звязаныя са сном</string>
+    <string name="up_slept_hour">\" Уверсе паказана колькі гадзін вы праспалі за ўказаны дзень\"</string>
+    <string name="next_time_date">Далей ад якога часу да якога часу і дата</string>
+    <string name="course_record_dream">\"Клікнуўшы на картку Вы можаце паглядзець што снілася ў той дзень, вядома ж калі вы яго запісалі\"</string>
+    <string name="create_new_record">Націснуўшы на гэтую кнопку вы можаце стварыць новую запіс</string>
+    <string name="folow_finance_window">\" Акно для сачэння за вашы фінансамі\"</string>
+    <string name="new_appear_open">\" Уверсе картка з парадамі звязаныя з фінансамі, новы з\'яўляецца кожны раз калі вы адкрываеце гэта акно\"</string>
+    <string name="main_fun_in_ex">\""Асноўныя функцыі выконваюць кнопкі даходу і расходу\"</string>
+    <string name="template_work">\"Таксама ёсць спіс шаблонных выдаткаў па націску на элемент вы можаце працаваць з ім\"</string>
+    <string name="history_button_ex_te">\"І вядома ж кнопка гісторыі дзе ўлічваецца ўсё акрамя шаблонных выдаткаў\"</string>
 </resources>
