--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -261,70 +261,70 @@ swiping to the right, you can remove an Item from the list of frequent spenders.
     <string name="my_dream_in_dream">I had a dream in a dream that was a dream</string>
     <string name="congratulation">Congratulations!</string>
     <string name="level">\"Level \"</string>
-    <string name="you_are_hello">Вас приветствует</string>
-    <string name="tool">Инструмент</string>
-    <string name="got_you_aim">Достижения ваших целей</string>
-    <string name="what_can_i_do">Что я умею делать ?</string>
-    <string name="create_notes">Создавать заметки</string>
-    <string name="follow_finance">Следить за финансами</string>
-    <string name="keep_focus">Держать фокус</string>
-    <string name="keep_schedule">Вести расписание</string>
-    <string name="create_standup">Создавать стэндап</string>
-    <string name="also">А также</string>
-    <string name="to_create_event">Создавать события</string>
-    <string name="fix_idea">Фиксировать идеи</string>
-    <string name="lets_start">Давайте начинать !</string>
-    <string name="click_by_screen">Кликните по экрану</string>
-    <string name="before_start">\"Перед началом предлагаем познокомиться с приложением \"</string>
-    <string name="two_tools">Здесь имеются два инструмента навигации</string>
-    <string name="bottom_and_side">Нижняя и боковая</string>
-    <string name="side_open_by_click">Боковая открывается по нажатию на бургер которая находится в верхнем левом углу</string>
-    <string name="after_instruction">После перехода на каждое из окон подождите запуск инструктажа</string>
-    <string name="go">Поехали !</string>
-    <string name="you_calendar">\"Ваш календарь \"</string>
-    <string name="show_day">Отображает дни с обновлением на последующие 3 месяца</string>
-    <string name="set_event_new_task">Зажатием на дату вы можете устанавливать событие или же новую задачу в определенный день недели</string>
-    <string name="next_you_cards">Дальше идут ваши карточки</string>
-    <string name="here_show">Здесь отображаются все ваши карточки с окон Привычки,Категории,События</string>
-    <string name="click_cards_ha_ca">Кликнув на карточки привычек или же категории вы можете проделать определенное действие</string>
-    <string name="show_profile">Открыв боковую панель вы можете увидеть ваш профиль</string>
-    <string name="avater_name">Аватарка,имя и текущий уровень,для того чтобы установить аватарку и имя кликните на них</string>
-    <string name="lvlup_some_action">Уровень повышается за определённые действие такие выполнение привычек,задач и тому подобных</string>
-    <string name="inside_cards_record">\"Карточки внутри которых можно записывать заметки или же задачи \"</string>
-    <string name="hold_card">\"Зажмите на карточку из списка чтобы вызвать окно с действиями \"</string>
-    <string name="insert_button">\"Кнопка добавить \"</string>
-    <string name="create_new_category_click">Нажав на эту кнопку вы можете создать новую карточку,указав название категории и иконку</string>
-    <string name="under_everyday">\" Под каждым днём прячется список который можно заполнить \"</string>
-    <string name="cause_see">Чтобы увидеть что запланировано на тот или иной день кликните на него</string>
-    <string name="hold_task_action">\"Можете зажать на запланнированную задачу из списка чтобы вызвать окно с действиями \"</string>
-    <string name="click_here_button">Нажав на эту кнопку вы можете создать дела на определенный день недели</string>
-    <string name="planning_events">Ваш список запланированных событий</string>
-    <string name="set_remind_by_wish">\" По желанию вы можете установить напоминание \"</string>
-    <string name="create_ev_date">Нажав на эту кнопку вы можете создать события на определенную дату</string>
-    <string name="list_habit">Ваш список привычек которые вы хотите к себе привить</string>
-    <string name="in_left_day">Слева указано сколько дней вы уже закрепляете привычку</string>
-    <string name="in_right_hold">\"Справа сколько дней нужно держаться \"</string>
-    <string name="click_by_habit">\"Кликнув на карточку вы можете отметить выполенение привычки за текущий день а зажав на карточу вы можете вызвать окно с действиями \"</string>
-    <string name="create_new_habit">\" Нажав на эту кнопку вы можете создать новую привычку \"</string>
-    <string name="list_process">Ваш список процессов на которых требуется концентрация</string>
-    <string name="theroy_thousand_hour">\" Это окно создана на основе теорий 10 000 часов\"</string>
-    <string name="profession_thousand_hour">\" В котором говорится чтобы стать профессионалом в определенной области, нужно потратить на её изучение около 10 тысяч часов  \"</string>
-    <string name="work_stopwatch_timer">Нажав на эту кнопку вы можете создать новый процесс,поработать с таймером или же с секундомером</string>
-    <string name="list_standup">\" Ваш список стэндапов \"</string>
-    <string name="team_work">Это окно создана на основе системы командной работы</string>
-    <string name="plan_and_problem_share">\" Где участники команды ежедневоно создают отчёт о проделанной работе и деляться со своми планами и проблемами  \"</string>
-    <string name="good_system">Это очень хорошая система,чтоб держать себя в тонусе</string>
-    <string name="good_friend_standup">\" Вы можете попросить хорошого знакомого чтоб он следил за составлением стэндапов\"</string>
-    <string name="share_fun_send">\" И там как раз есть функция поделиться чтоб вы могли его отправить \"</string>
-    <string name="create_new_standup">\" Нажав на эту кнопку вы можете создать новый стэндап\"</string>
-    <string name="list_dream">Ваш список где собираются ваши записи связанные со сном</string>
-    <string name="up_slept_hour">\" Вверху указано сколько часов вы проспали за указанный день\"</string>
-    <string name="next_time_date">Дальше от скольки до скольки и дата</string>
-    <string name="course_record_dream">\"Кликнув на карточку вы можете посмотреть что снилось в тот день ,конечно же если вы его записали \"</string>
-    <string name="create_new_record">Нажав на эту кнопку вы можете создать новыю запись</string>
-    <string name="folow_finance_window">\" Окно для слежения за ваши финансами \"</string>
-    <string name="new_appear_open">\" Вверху карточка с советами связанные с финансами,новый появляется каждый раз когда вы открываете это окно \"</string>
-    <string name="main_fun_in_ex">\"Основые функции выполняют кнопки Дохода и Расхода \"</string>
-    <string name="template_work">\"Также есть список шаблонных расходов по нажатию на элемент вы можете работать с ним \"</string>
-    <string name="history_button_ex_te">\"И конечно же кнопка истории где учитывается всё помимо шаблонных расходов \"</string>
+    <string name="you_are_hello">You are welcomed</string>
+    <string name="tool">The tool</string>
+    <string name="got_you_aim">Achieving your goals</string>
+    <string name="what_can_i_do">What can I do ?</string>
+    <string name="create_notes">Create notes</string>
+    <string name="follow_finance">Keep track of finances</string>
+    <string name="keep_focus">Keep focus</string>
+    <string name="keep_schedule">Keep a schedule</string>
+    <string name="create_standup">Create a stand up</string>
+    <string name="also">And also</string>
+    <string name="to_create_event">Create events</string>
+    <string name="fix_idea">Fix ideas</string>
+    <string name="lets_start">Let \'s get started !</string>
+    <string name="click_by_screen">Click on the screen</string>
+    <string name="before_start">\""Before you start, we suggest you get acquainted with the application\"</string>
+    <string name="two_tools">There are two navigation tools available here</string>
+    <string name="bottom_and_side">Lower and side</string>
+    <string name="side_open_by_click">The side one opens by clicking on the burger which is located in the upper left corner</string>
+    <string name="after_instruction">After switching to each of the windows, wait for the briefing to start</string>
+    <string name="go">Let\'s go!</string>
+    <string name="you_calendar">\"Your calendar\"</string>
+    <string name="show_day">Displays the days updated for the next 3 months</string>
+    <string name="set_event_new_task">By clicking on the date you can set an event or a new task on a certain day of the week By clicking on the date you can set an event or a new task on a certain day of the week</string>
+    <string name="next_you_cards">Next come your cards</string>
+    <string name="here_show">All your cards from the Habits,Categories,Events windows are displayed here</string>
+    <string name="click_cards_ha_ca">By clicking on the habit cards or categories, you can perform a certain action</string>
+    <string name="show_profile">By opening the sidebar you can see your profile</string>
+    <string name="avater_name">Avatar, name and current level, in order to set the avatar and name, click on them</string>
+    <string name="lvlup_some_action">The level increases for certain actions such as performing habits, tasks, and the like</string>
+    <string name="inside_cards_record">\"Cards inside which you can write notes or tasks\"</string>
+    <string name="hold_card">\"Click on a card from the list to open a window with actions\"</string>
+    <string name="insert_button">\"Add button\"</string>
+    <string name="create_new_category_click">By clicking on this button, you can create a new card by specifying the category name and icon</string>
+    <string name="under_everyday">\" There is a list hidden under every day that can be filled out\"</string>
+    <string name="cause_see">To see what is planned for a particular day, click on it</string>
+    <string name="hold_task_action">\""You can set a scheduled task from the list to open a window with actions\"</string>
+    <string name="click_here_button">By clicking on this button you can create cases for a specific day of the week</string>
+    <string name="planning_events">Your list of scheduled events</string>
+    <string name="set_remind_by_wish">\" Optionally, you can set a reminder\"</string>
+    <string name="create_ev_date">By clicking on this button you can create events for a specific date</string>
+    <string name="list_habit">Your list of habits that you want to instill in yourself</string>
+    <string name="in_left_day">On the left is indicated how many days you have already fixed the habit</string>
+    <string name="in_right_hold">\"On the right, how many days do you need to hold on\"</string>
+    <string name="click_by_habit">\""By clicking on the card you can mark the completion of the habit for the current day and by pressing on the card you can open a window with actions\"</string>
+    <string name="create_new_habit">\" By clicking on this button you can create a new habit\"</string>
+    <string name="list_process">Your list of processes that require concentration</string>
+    <string name="theroy_thousand_hour">\" This window is created based on the theories of 10,000 hours\"</string>
+    <string name="profession_thousand_hour">\" Which says to become a professional in a certain field, you need to spend about 10 thousand hours studying it\"</string>
+    <string name="work_stopwatch_timer">By clicking on this button, you can create a new process, work with a timer or with a stopwatch</string>
+    <string name="list_standup">\" Your list of standups\"</string>
+    <string name="team_work">This window is based on a team work system</string>
+    <string name="plan_and_problem_share">\" Where team members create a daily progress report and share their plans and problems\"</string>
+    <string name="good_system">This is a very good system to keep yourself in good shape</string>
+    <string name="good_friend_standup">\" You can ask a good friend to follow the compilation of standups\"</string>
+    <string name="share_fun_send">\" And there is just a share function so that you can send it\"</string>
+    <string name="create_new_standup">\" By clicking on this button you can create a new standup\"</string>
+    <string name="list_dream">Your list where your sleep related records are collected</string>
+    <string name="up_slept_hour">\" At the top it shows how many hours you slept during the specified day\"</string>
+    <string name="next_time_date">Then from how many to how many and the date</string>
+    <string name="course_record_dream">\"By clicking on the card , you can see what you dreamed that day , of course , if you recorded it\"</string>
+    <string name="create_new_record">By clicking on this button you can create a new entry</string>
+    <string name="folow_finance_window">\" A window for tracking your finances\"</string>
+    <string name="new_appear_open">\" At the top is a card with financial-related tips, a new one appears every time you open this window\"</string>
+    <string name="main_fun_in_ex">\""The main functions are performed by the Income and Expense buttons\"</string>
+    <string name="template_work">\"There is also a list of template expenses by clicking on an item you can work with it\"</string>
+    <string name="history_button_ex_te">\"And of course, the history button where everything is taken into account in addition to template expenses\"</string>
 </resources>
