--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -260,70 +260,70 @@ streichen Sie nach rechts, können Sie ein Element aus der Liste der häufigen A
     <string name="my_dream_in_dream">Ich hatte einen Traum in einem Traum, der ein Traum war</string>
     <string name="congratulation">Gratulierter!</string>
     <string name="level">\"Ebene \"</string>
-    <string name="you_are_hello">Вас приветствует</string>
-    <string name="tool">Инструмент</string>
-    <string name="got_you_aim">Достижения ваших целей</string>
-    <string name="what_can_i_do">Что я умею делать ?</string>
-    <string name="create_notes">Создавать заметки</string>
-    <string name="follow_finance">Следить за финансами</string>
-    <string name="keep_focus">Держать фокус</string>
-    <string name="keep_schedule">Вести расписание</string>
-    <string name="create_standup">Создавать стэндап</string>
-    <string name="also">А также</string>
-    <string name="to_create_event">Создавать события</string>
-    <string name="fix_idea">Фиксировать идеи</string>
-    <string name="lets_start">Давайте начинать !</string>
-    <string name="click_by_screen">Кликните по экрану</string>
-    <string name="before_start">\"Перед началом предлагаем познокомиться с приложением \"</string>
-    <string name="two_tools">Здесь имеются два инструмента навигации</string>
-    <string name="bottom_and_side">Нижняя и боковая</string>
-    <string name="side_open_by_click">Боковая открывается по нажатию на бургер которая находится в верхнем левом углу</string>
-    <string name="after_instruction">После перехода на каждое из окон подождите запуск инструктажа</string>
-    <string name="go">Поехали !</string>
-    <string name="you_calendar">\"Ваш календарь \"</string>
-    <string name="show_day">Отображает дни с обновлением на последующие 3 месяца</string>
-    <string name="set_event_new_task">Зажатием на дату вы можете устанавливать событие или же новую задачу в определенный день недели</string>
-    <string name="next_you_cards">Дальше идут ваши карточки</string>
-    <string name="here_show">Здесь отображаются все ваши карточки с окон Привычки,Категории,События</string>
-    <string name="click_cards_ha_ca">Кликнув на карточки привычек или же категории вы можете проделать определенное действие</string>
-    <string name="show_profile">Открыв боковую панель вы можете увидеть ваш профиль</string>
-    <string name="avater_name">Аватарка,имя и текущий уровень,для того чтобы установить аватарку и имя кликните на них</string>
-    <string name="lvlup_some_action">Уровень повышается за определённые действие такие выполнение привычек,задач и тому подобных</string>
-    <string name="inside_cards_record">\"Карточки внутри которых можно записывать заметки или же задачи \"</string>
-    <string name="hold_card">\"Зажмите на карточку из списка чтобы вызвать окно с действиями \"</string>
-    <string name="insert_button">\"Кнопка добавить \"</string>
-    <string name="create_new_category_click">Нажав на эту кнопку вы можете создать новую карточку,указав название категории и иконку</string>
-    <string name="under_everyday">\" Под каждым днём прячется список который можно заполнить \"</string>
-    <string name="cause_see">Чтобы увидеть что запланировано на тот или иной день кликните на него</string>
-    <string name="hold_task_action">\"Можете зажать на запланнированную задачу из списка чтобы вызвать окно с действиями \"</string>
-    <string name="click_here_button">Нажав на эту кнопку вы можете создать дела на определенный день недели</string>
-    <string name="planning_events">Ваш список запланированных событий</string>
-    <string name="set_remind_by_wish">\" По желанию вы можете установить напоминание \"</string>
-    <string name="create_ev_date">Нажав на эту кнопку вы можете создать события на определенную дату</string>
-    <string name="list_habit">Ваш список привычек которые вы хотите к себе привить</string>
-    <string name="in_left_day">Слева указано сколько дней вы уже закрепляете привычку</string>
-    <string name="in_right_hold">\"Справа сколько дней нужно держаться \"</string>
-    <string name="click_by_habit">\"Кликнув на карточку вы можете отметить выполенение привычки за текущий день а зажав на карточу вы можете вызвать окно с действиями \"</string>
-    <string name="create_new_habit">\" Нажав на эту кнопку вы можете создать новую привычку \"</string>
-    <string name="list_process">Ваш список процессов на которых требуется концентрация</string>
-    <string name="theroy_thousand_hour">\" Это окно создана на основе теорий 10 000 часов\"</string>
-    <string name="profession_thousand_hour">\" В котором говорится чтобы стать профессионалом в определенной области, нужно потратить на её изучение около 10 тысяч часов  \"</string>
-    <string name="work_stopwatch_timer">Нажав на эту кнопку вы можете создать новый процесс,поработать с таймером или же с секундомером</string>
-    <string name="list_standup">\" Ваш список стэндапов \"</string>
-    <string name="team_work">Это окно создана на основе системы командной работы</string>
-    <string name="plan_and_problem_share">\" Где участники команды ежедневоно создают отчёт о проделанной работе и деляться со своми планами и проблемами  \"</string>
-    <string name="good_system">Это очень хорошая система,чтоб держать себя в тонусе</string>
-    <string name="good_friend_standup">\" Вы можете попросить хорошого знакомого чтоб он следил за составлением стэндапов\"</string>
-    <string name="share_fun_send">\" И там как раз есть функция поделиться чтоб вы могли его отправить \"</string>
-    <string name="create_new_standup">\" Нажав на эту кнопку вы можете создать новый стэндап\"</string>
-    <string name="list_dream">Ваш список где собираются ваши записи связанные со сном</string>
-    <string name="up_slept_hour">\" Вверху указано сколько часов вы проспали за указанный день\"</string>
-    <string name="next_time_date">Дальше от скольки до скольки и дата</string>
-    <string name="course_record_dream">\"Кликнув на карточку вы можете посмотреть что снилось в тот день ,конечно же если вы его записали \"</string>
-    <string name="create_new_record">Нажав на эту кнопку вы можете создать новыю запись</string>
-    <string name="folow_finance_window">\" Окно для слежения за ваши финансами \"</string>
-    <string name="new_appear_open">\" Вверху карточка с советами связанные с финансами,новый появляется каждый раз когда вы открываете это окно \"</string>
-    <string name="main_fun_in_ex">\"Основые функции выполняют кнопки Дохода и Расхода \"</string>
-    <string name="template_work">\"Также есть список шаблонных расходов по нажатию на элемент вы можете работать с ним \"</string>
-    <string name="history_button_ex_te">\"И конечно же кнопка истории где учитывается всё помимо шаблонных расходов \"</string>
+    <string name="you_are_hello">Willkommen</string>
+    <string name="tool">Werkzeug</string>
+    <string name="got_you_aim">Erreichen Sie Ihre Ziele</string>
+    <string name="what_can_i_do">Was kann ich tun ?</string>
+    <string name="create_notes">Notizen erstellen</string>
+    <string name="follow_finance">Finanzen im Auge behalten</string>
+    <string name="keep_focus">Fokus halten</string>
+    <string name="keep_schedule">Zeitplan halten</string>
+    <string name="create_standup">Erstellen eines Stand-up</string>
+    <string name="also">Sowie</string>
+    <string name="to_create_event">Ereignisse erstellen</string>
+    <string name="fix_idea">Ideen fixieren</string>
+    <string name="lets_start">Lasst uns anfangen !</string>
+    <string name="click_by_screen">Klicken Sie auf den Bildschirm</string>
+    <string name="before_start">\""Vor dem Start bieten wir Ihnen die Anwendung kennen zu lernen\"</string>
+    <string name="two_tools">Es gibt zwei Navigationswerkzeuge</string>
+    <string name="bottom_and_side">Unten und seitlich</string>
+    <string name="side_open_by_click">Die Seite öffnet sich durch Klicken auf den Burger, der in der oberen linken Ecke ist</string>
+    <string name="after_instruction">Warten Sie nach dem Wechseln zu jedem Fenster, bis die Instruktion gestartet wird</string>
+    <string name="go">Auf los geht\'s los!</string>
+    <string name="you_calendar">\"Ihr Kalender\"</string>
+    <string name="show_day">Zeigt die aktualisierten Tage für die nächsten 3 Monate an</string>
+    <string name="set_event_new_task">Wenn Sie auf ein Datum klicken, können Sie ein Ereignis oder eine neue Aufgabe an einem bestimmten Wochentag festlegen</string>
+    <string name="next_you_cards">Als nächstes kommen Ihre Karten</string>
+    <string name="here_show">Hier werden alle Ihre Karten mit den Fenstern Gewohnheiten,Kategorien,Ereignisse angezeigt</string>
+    <string name="click_cards_ha_ca">Durch Klicken auf die Karten Gewohnheiten oder Kategorien können Sie eine bestimmte Aktion durchführen</string>
+    <string name="show_profile">Durch Öffnen der Seitenleiste können Sie Ihr Profil sehen</string>
+    <string name="avater_name">Avatar,Name und aktuelle Ebene,um den Avatar und den Namen zu setzen, klicken Sie auf sie</string>
+    <string name="lvlup_some_action">Das Niveau steigt für bestimmte Aktionen wie die Erfüllung von Gewohnheiten, Aufgaben und dergleichen</string>
+    <string name="inside_cards_record">\"Karten, in denen Sie Notizen oder Aufgaben aufzeichnen können\"</string>
+    <string name="hold_card">\"Klicken Sie auf eine Karte aus der Liste, um ein Fenster mit Aktionen aufzurufen\"</string>
+    <string name="insert_button">\"Schaltfläche hinzufügen\"</string>
+    <string name="create_new_category_click">Wenn Sie auf diese Schaltfläche klicken, können Sie eine neue Karte erstellen, indem Sie den Namen der Kategorie und das Symbol angeben</string>
+    <string name="under_everyday">\" Unter jedem Tag versteckt sich eine Liste, die Sie ausfüllen können\"</string>
+    <string name="cause_see">Um zu sehen, was für einen bestimmten Tag geplant ist, klicken Sie darauf</string>
+    <string name="hold_task_action">\""Sie können eine geplante Aufgabe aus der Liste festlegen, um ein Fenster mit Aktionen aufzurufen\"</string>
+    <string name="click_here_button">Wenn Sie auf diese Schaltfläche klicken, können Sie einen Fall für einen bestimmten Wochentag erstellen</string>
+    <string name="planning_events">Ihre Liste der geplanten Ereignisse</string>
+    <string name="set_remind_by_wish">\" Optional können Sie eine Erinnerung einstellen\"</string>
+    <string name="create_ev_date">Wenn Sie auf diese Schaltfläche klicken, können Sie Ereignisse für ein bestimmtes Datum erstellen</string>
+    <string name="list_habit">Ihre Liste der Gewohnheiten, die Sie zu sich selbst vermitteln wollen</string>
+    <string name="in_left_day">Auf der linken Seite wird angegeben, wie viele Tage Sie bereits eine Gewohnheit festigen</string>
+    <string name="in_right_hold">\"Auf der rechten Seite, wie viele Tage Sie brauchen, um zu halten\"</string>
+    <string name="click_by_habit">\""Mit einem Klick auf die Karte können Sie die Erfüllung der Gewohnheit für den aktuellen Tag markieren und mit einem Klick auf die Karte können Sie ein Fenster mit Aktionen aufrufen\"</string>
+    <string name="create_new_habit">\" Durch Klicken auf diese Schaltfläche können Sie eine neue Gewohnheit erstellen\"</string>
+    <string name="list_process">Ihre Liste der Prozesse, auf die Sie sich konzentrieren müssen</string>
+    <string name="theroy_thousand_hour">\" Dieses Fenster basiert auf Theorien von 10.000 Stunden\"</string>
+    <string name="profession_thousand_hour">\" Das heißt, um ein Profi in einem bestimmten Bereich zu werden, müssen Sie etwa 10 Tausend Stunden damit verbringen, es zu studieren\"</string>
+    <string name="work_stopwatch_timer">Wenn Sie auf diese Schaltfläche klicken, können Sie einen neuen Prozess erstellen, mit dem Timer oder mit der Stoppuhr arbeiten</string>
+    <string name="list_standup">\" Ihre Liste der Standups\"</string>
+    <string name="team_work">Dieses Fenster basiert auf einem Teamwork-SystemDieses Fenster basiert auf einem Teamwork-System</string>
+    <string name="plan_and_problem_share">\" Wo die Teammitglieder täglich einen Bericht über die geleistete Arbeit erstellen und ihre Pläne und Probleme teilen\"</string>
+    <string name="good_system">Es ist ein sehr gutes System, um sich fit zu halten</string>
+    <string name="good_friend_standup">\" Sie können einen guten Freund bitten, dass er die Erstellung von Standups verfolgt\"</string>
+    <string name="share_fun_send">\" Und es gibt nur eine Funktion zu teilen, so dass Sie es senden können\"</string>
+    <string name="create_new_standup">\" Wenn Sie auf diese Schaltfläche klicken, können Sie einen neuen Stand erstellen\"</string>
+    <string name="list_dream">Ihre Liste wo Ihre schlafbezogenen Aufzeichnungen gesammelt werden</string>
+    <string name="up_slept_hour">\" Oben wird angegeben, wie viele Stunden Sie für den angegebenen Tag verschlafen haben\"</string>
+    <string name="next_time_date">Weiter von wie viel zu wie viel und Datum</string>
+    <string name="course_record_dream">\"Wenn Sie auf die Karte klicken, können Sie sehen, was an diesem Tag geträumt wurde, natürlich, wenn Sie es aufgezeichnet haben\"</string>
+    <string name="create_new_record">Durch Klicken auf diese Schaltfläche können Sie einen neuen Eintrag erstellen</string>
+    <string name="folow_finance_window">\" Fenster, um Ihre Finanzen zu verfolgen\"</string>
+    <string name="new_appear_open">\" An der Spitze der Karte mit Tipps im Zusammenhang mit Finanzen,eine neue erscheint jedes Mal, wenn Sie dieses Fenster öffnen\"</string>
+    <string name="main_fun_in_ex">\""Die wichtigsten Funktionen werden von den Schaltflächen Einnahmen und Ausgaben ausgeführt\"</string>
+    <string name="template_work">\"Es gibt auch eine Liste von Vorlagenkosten durch Klicken auf ein Element, das Sie mit ihm arbeiten können\"</string>
+    <string name="history_button_ex_te">\"Und natürlich die Geschichte Taste, wo berücksichtigt alle zusätzlich zu den Vorlagenkosten\"</string>
 </resources>
